--- a/style.css
+++ b/style.css
@@ -88,6 +88,7 @@ body main button {
   background-position: center;
   background-size: 16vw;
   background-repeat: no-repeat;
+  cursor: pointer;
 }
 body footer {
   height: 10vh;
@@ -96,6 +97,8 @@ body footer {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  font-size: 0.938em;
+  font-family: "Montserrat";
 }
 body footer p {
   padding: 1vh;
@@ -103,4 +106,265 @@ body footer p {
 body footer p a {
   color: white;
   text-decoration: none;
+}
+
+@media (min-width: 0px) and (min-height: 0px) and (max-width: 320px) and (max-height: 568px) {
+  html {
+    background-size: 120vh;
+    height: 120vh;
+  }
+  body div {
+    height: 120vh;
+    background-size: 60vh;
+    justify-content: end;
+  }
+  body header {
+    display: flex;
+    flex-direction: column;
+    height: 30vh;
+    justify-content: space-evenly;
+  }
+  body header section {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    align-items: center;
+    height: 20vh;
+    width: 100%;
+    justify-content: center;
+  }
+  body header section img {
+    width: 10vw;
+  }
+  body header section h1 {
+    font-size: 1em;
+  }
+  body header nav {
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+  }
+  body header nav ul {
+    display: flex;
+    width: 100%;
+    justify-content: space-around;
+    align-items: center;
+  }
+  body header nav ul li {
+    list-style: none;
+    font-size: 0.8em;
+  }
+  body header nav ul li a {
+    font-size: 0.8em;
+  }
+  body main {
+    height: 80vh;
+  }
+  body main img {
+    width: 50vw;
+  }
+  body main button {
+    width: 30vw;
+    background-size: 39vw;
+  }
+  body footer {
+    height: 5vh;
+    font-size: 0.3em;
+    height: 10vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+  }
+  body footer p {
+    padding: 0;
+  }
+}
+@media (max-width: 568px) and (max-height: 320px) {
+  html {
+    width: 100%;
+    height: 190vh;
+  }
+  body div {
+    height: 190vh;
+    background-size: 90vh;
+    justify-content: end;
+  }
+  body div header {
+    display: flex;
+    flex-direction: column;
+  }
+  body div header section {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 40vh;
+  }
+  body div header nav {
+    width: 100%;
+    height: 15vh;
+  }
+  body div header nav ul {
+    display: flex;
+    width: 100%;
+    height: 15vh;
+    justify-content: space-around;
+    align-items: center;
+  }
+  body div header nav ul li {
+    list-style: none;
+    font-size: 0.7em;
+  }
+  body div main {
+    height: 115vh;
+  }
+  body div main img {
+    padding-top: 15vh;
+    width: 30vw;
+  }
+  body div main button {
+    width: 30vw;
+    height: 10vh;
+    background-size: 39vw;
+  }
+  body div footer {
+    height: 15vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+  }
+  body div footer p {
+    padding: 0;
+    font-size: 0.7em;
+  }
+}
+@media (min-width: 321px) and (max-width: 569px) and (min-height: 569px) and (max-height: 932px) {
+  html {
+    background-size: 120vh;
+    height: 120vh;
+  }
+  body div {
+    height: 120vh;
+    background-size: 60vh;
+    justify-content: end;
+  }
+  body header {
+    display: flex;
+    flex-direction: column;
+    height: 30vh;
+    justify-content: space-evenly;
+  }
+  body header section {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    align-items: center;
+    height: 20vh;
+    width: 100%;
+    justify-content: center;
+  }
+  body header section img {
+    width: 10vw;
+  }
+  body header section h1 {
+    font-size: 1em;
+  }
+  body header nav {
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+  }
+  body header nav ul {
+    display: flex;
+    width: 100%;
+    justify-content: space-around;
+    align-items: center;
+  }
+  body header nav ul li {
+    list-style: none;
+    font-size: 0.8em;
+  }
+  body header nav ul li a {
+    font-size: 0.8em;
+  }
+  body main {
+    height: 80vh;
+  }
+  body main img {
+    width: 50vw;
+  }
+  body main button {
+    width: 40vw;
+    background-size: 55vw;
+  }
+  body footer {
+    height: 5vh;
+    font-size: 0.5em;
+    height: 10vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+  }
+  body footer p {
+    padding: 0;
+  }
+}
+@media (max-width: 932px) and (max-height: 440px) {
+  html {
+    width: 100%;
+    height: 190vh;
+  }
+  body div {
+    height: 190vh;
+    background-size: 90vh;
+    justify-content: end;
+  }
+  body div header {
+    display: flex;
+    flex-direction: column;
+  }
+  body div header section {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 40vh;
+  }
+  body div header nav {
+    width: 100%;
+    height: 15vh;
+  }
+  body div header nav ul {
+    display: flex;
+    width: 100%;
+    height: 15vh;
+    justify-content: space-around;
+    align-items: center;
+  }
+  body div header nav ul li {
+    list-style: none;
+    font-size: 0.7em;
+  }
+  body div main {
+    height: 115vh;
+  }
+  body div main img {
+    padding-top: 15vh;
+    width: 30vw;
+  }
+  body div main button {
+    width: 30vw;
+    height: 10vh;
+    background-size: 39vw;
+  }
+  body div footer {
+    height: 15vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+  }
+  body div footer p {
+    padding: 0;
+    font-size: 0.7em;
+  }
 }/*# sourceMappingURL=style.css.map */
