--- a/style.scss
+++ b/style.scss
@@ -90,6 +90,7 @@ body{
             background-position: center;
             background-size: 16vw;
             background-repeat: no-repeat;
+            cursor: pointer;
         }
     }
 
@@ -100,6 +101,8 @@ body{
         flex-direction: column;
         justify-content: center;
         align-items: center;
+        font-size: 0.938em;
+        font-family: "Montserrat";
         p{
             padding: 1vh;
             a{
@@ -110,3 +113,300 @@ body{
     }
 }
 
+@media (min-width: 0px) and (min-height:0px) and (max-width: 320px) and (max-height:568px) {
+    html{
+        background-size: 120vh;
+        height: 120vh;
+    }
+    
+    body{
+        div{
+            height: 120vh;
+            background-size: 60vh;
+            justify-content: end;
+        }
+
+        header{
+            display: flex;
+            flex-direction: column;
+            height: 30vh;
+            justify-content: space-evenly;
+            section{
+                display: flex;
+                flex-direction: column;
+                text-align: center;
+                align-items: center;
+                height: 20vh;
+                width: 100%;
+                justify-content: center;
+                img{
+                    width: 10vw;
+                }
+                h1{
+                    font-size: 1em;
+                }
+            
+            }
+
+            nav{
+                width: 100%;
+                display: flex;
+                justify-content: space-around;
+                align-items: center;
+                ul{
+                    display: flex;
+                    width: 100%;
+                    justify-content: space-around;
+                    align-items: center;
+                    li{
+                        list-style: none;
+                        font-size: 0.8em;
+                        a{
+                            font-size: 0.8em;
+                        }
+                    }
+                }
+            }
+        }
+
+        main{
+            height: 80vh;
+            img{
+                width: 50vw;
+
+            }
+            button{
+                width: 30vw;
+                background-size: 39vw;
+            }
+        }
+
+        footer{
+            height: 5vh;
+            font-size: 0.3em;
+            height: 10vh;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-evenly;
+            p{
+                padding: 0;
+            }
+        }
+    }
+}
+
+@media (max-width: 568px) and (max-height:320px) {
+    html{
+        width: 100%;
+        height: 190vh;
+    }
+
+
+
+    body{
+        div{
+            height: 190vh;
+            background-size: 90vh;
+            justify-content: end;
+
+            header{
+                display: flex;
+                flex-direction: column;
+                section{
+                    display: flex;
+                    flex-direction: column;
+                    width: 100%;
+                    height: 40vh;
+                }
+                nav{
+                    width: 100%;
+                    height: 15vh;
+                    ul{
+                        display: flex;
+                        width: 100%;
+                        height: 15vh;
+                        justify-content: space-around;
+                        align-items: center;
+                        li{
+                            list-style: none;
+                            font-size: 0.7em;
+                        }
+                    }
+                }
+            }
+
+            main{
+                height: 115vh;
+                img{
+                    padding-top: 15vh;
+                    width: 30vw;
+                }
+                button{
+                width: 30vw;
+                height: 10vh;
+                background-size: 39vw;
+                }
+            }
+
+            footer{
+                height: 15vh;
+                display: flex;
+                flex-direction: column;
+                justify-content: space-evenly;
+                p{
+                    padding: 0;
+                    font-size: 0.7em;
+                }
+            }
+        }
+    }
+}
+
+@media (min-width: 321px) and (max-width: 569px) and (min-height:569px) and (max-height: 932px) {
+    html{
+        background-size: 120vh;
+        height: 120vh;
+    }
+    
+    body{
+        div{
+            height: 120vh;
+            background-size: 60vh;
+            justify-content: end;
+        }
+
+        header{
+            display: flex;
+            flex-direction: column;
+            height: 30vh;
+            justify-content: space-evenly;
+            section{
+                display: flex;
+                flex-direction: column;
+                text-align: center;
+                align-items: center;
+                height: 20vh;
+                width: 100%;
+                justify-content: center;
+                img{
+                    width: 10vw;
+                }
+                h1{
+                    font-size: 1em;
+                }
+            
+            }
+
+            nav{
+                width: 100%;
+                display: flex;
+                justify-content: space-around;
+                align-items: center;
+                ul{
+                    display: flex;
+                    width: 100%;
+                    justify-content: space-around;
+                    align-items: center;
+                    li{
+                        list-style: none;
+                        font-size: 0.8em;
+                        a{
+                            font-size: 0.8em;
+                        }
+                    }
+                }
+            }
+        }
+
+        main{
+            height: 80vh;
+            img{
+                width: 50vw;
+
+            }
+            button{
+                width: 40vw;
+                background-size: 55vw;
+            }
+        }
+
+        footer{
+            height: 5vh;
+            font-size: 0.5em;
+            height: 10vh;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-evenly;
+            p{
+                padding: 0;
+            }
+        }
+    }
+}
+
+@media(max-width:932px) and (max-height: 440px) {
+    html{
+        width: 100%;
+        height: 190vh;
+    }
+
+
+
+    body{
+        div{
+            height: 190vh;
+            background-size: 90vh;
+            justify-content: end;
+
+            header{
+                display: flex;
+                flex-direction: column;
+                section{
+                    display: flex;
+                    flex-direction: column;
+                    width: 100%;
+                    height: 40vh;
+                }
+                nav{
+                    width: 100%;
+                    height: 15vh;
+                    ul{
+                        display: flex;
+                        width: 100%;
+                        height: 15vh;
+                        justify-content: space-around;
+                        align-items: center;
+                        li{
+                            list-style: none;
+                            font-size: 0.7em;
+                        }
+                    }
+                }
+            }
+
+            main{
+                height: 115vh;
+                img{
+                    padding-top: 15vh;
+                    width: 30vw;
+                }
+                button{
+                width: 30vw;
+                height: 10vh;
+                background-size: 39vw;
+                }
+            }
+
+            footer{
+                height: 15vh;
+                display: flex;
+                flex-direction: column;
+                justify-content: space-evenly;
+                p{
+                    padding: 0;
+                    font-size: 0.7em;
+                }
+            }
+        }
+    }
+}
